[package]
name = "fractal"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rust-animation = "0.2.3"
glfw = "0.42.0"
gl = "0.10.0"
stretch = "0.3.2"
tokio = { version = "1", features = ["full"] }
rand = "0.8.5"
